--- a/start.html
+++ b/start.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Market</title>
+    <title>esports-battlegroundsmobileindia</title>
 </head>
 <body>
     <!-- We can change this heading in future -->
-    <h1>This is a Store</h1>
-    <p>This is a Item in Store</p>
+    <h1>India ka BATTLEGROUNDS</h1>
+    <p>INDIA KA BATTLEGROUNDS IS HERE</p>
+    <a href="https://www.battlegroundsmobileindia.com/"> Click here to go to BGMI Website</a>
 </body>
 </html>
