--- a/image.html
+++ b/image.html
@@ -9,6 +9,7 @@
 <body>
     <!-- We can change this heading in future -->
     <h1>India ka BATTLEGROUNDS</h1>
+    <!-- Image tag -->
     <img src="https://www.battlegroundsmobileindia.com/common/img_m/main_bg_m1.jpg" alt="">
     <p>INDIA KA BATTLEGROUNDS IS HERE</p>
     <a href="https://www.battlegroundsmobileindia.com/"> Click here to go to BGMI Website</a>
