--- a/text.html
+++ b/text.html
@@ -13,9 +13,9 @@
     <img src="https://www.battlegroundsmobileindia.com/common/img_m/main_bg_m1.jpg" alt="">
     <p>INDIA KA BATTLEGROUNDS IS HERE</p>
     <!-- Bold, Italic, Underline tags -->
-    <b>India ka BATTLEGROUNDS</b>
-    <i>India ka BATTLEGROUNDS</i>
-    <u>India ka BATTLEGROUNDS</u>
+    <b>India ka BATTLEGROUNDS</b><br>
+    <i>India ka BATTLEGROUNDS</i><br>
+    <u>India ka BATTLEGROUNDS</u><br>
     <a href="https://www.battlegroundsmobileindia.com/"> Click here to go to BGMI Website</a>
 </body>
 </html>
