--- a/Page layout.html
+++ b/Page layout.html
@@ -21,6 +21,7 @@ The official site of battlegroundsmobileindia <br>
             <section></section>
             <a href="https://www.battlegroundsmobileindia.com/" target="_main">battlegroundsmobileindia</a>
             <section>
+                <!-- div is an example of block element -->
                 <div>
                     <h1>Whem BATTLEGROUNDS Come</h1>
                     <p> Please note, the game is not available to play as the servers have been shut. Currently, the closed test track for BGMI is updated. Those who opted for a public test for the game before its launch are expected to get a message via email which takes them to the Play Store for downloading the game. However, the game will not be available to play as the servers are shut. We also understand that some other users who had not opted for the closed test are also getting this message. This is a technical error and we are working on resolving it. We will inform you once the game is available to PLAY.</p>
@@ -29,6 +30,8 @@ The official site of battlegroundsmobileindia <br>
                     <h1>When we can download BATTLEGROUNDS</h1>
                     <p>Several users  have been reaching out asking if they can download BGMI since they can see the "Download Now" option on the website.</p>
                 </div>
+                <!-- span is an example of inline element -->
+                <span>Thank you for your patience and understanding.</span>
             </section>
 
 
