--- a/list .html
+++ b/list .html
@@ -7,11 +7,19 @@
     <title>Html List</title>
 </head>
 <body>
+    <!-- unorderd list -->
     <ul type="Circle">
         <li>Home</li>
         <li>About</li>
         <li>Servies</li>
         <li>Contact</li>
     </ul>
+    <!-- orderd List -->
+    <ol type="I">
+        <li>Home</li>
+        <li>About</li>
+        <li>Servies</li>
+        <li>Contact</li>
+    </ol>
 </body>
 </html>
