--- a/Forms.html
+++ b/Forms.html
@@ -10,7 +10,7 @@
     <div>
       <h1>pre Registration</h1>
       <form action="form.php">
-        <input type="text" placeholder="Enter your IGN" />
+        <input type="text" placeholder="Enter your IGN" /><br>
         <label for="sectionida">
           <input type="radio" value="Group A" name="Group" id="sectionida" />
           Group A
@@ -19,6 +19,7 @@
           <input type="radio" value="Group B" name="Group" id="sectionidb" />
           Group B
         </label>
+        <input type="checkbox" name="IGN id" id="charchter id" class="Blue">
       </form>
     </div>
   </body>
